<resources>
    <string name="app_name">GiftGiver</string>
    <string name="user_photo">User Photo</string>
    <integer name="com_vk_sdk_AppId">8087245</integer>
    <string name="loading_friends_list">Loading friends list</string>
    <string name="friends_list">Friends List</string>
    <string name="account">Account</string>
    <string name="wishlists">WishLists</string>
    <string name="calendar">Calendar</string>
    <string name="cart">Cart</string>
    <string name="delete">Delete</string>
    <string name="gift_photo">Gift photo</string>
    <string name="my_wishlists">My WishLists :</string>
    <string name="wishlists_points">Wishlists :</string>
    <string name="user">User</string>
    <string name="filter">Filter</string>
    <string name="edit">Edit</string>
    <string name="delete_all">Delete All</string>
    <string name="cancel">Cancel</string>
    <string name="wishlist">Wishlist</string>
    <string name="gift">Gift</string>
    <string name="image_link">Image Link</string>
    <string name="description">Description</string>
    <string name="enter_wishlist_s_name">Enter Wishlist\'s name</string>
    <string name="logout">Logout</string>
    <string name="log_in_using_vk">Log in using VK</string>
    <string name="friend_wishlist">%1$s\'s %2$s</string>
    <string name="friend_bday">%1$s\'s bday</string>
    <string name="search">Search</string>
    <string name="add_delete_from_fav">Add/Delete from fav</string>
    <string name="change_image">Change image</string>
    <string name="goBack">Go Back</string>
    <string name="save">Save</string>
    <string name="deleteEventsTitle">Delete all events you added?</string>
    <string name="deleteEventsMessage">All friends\' bdays and holidays will stay</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="enter_event_desc">Enter event desc</string>
    <string name="info">Info</string>
    <string name="birth_date">Birth Date</string>
    <string name="pick_from_gallery">From gallery</string>
    <string name="take_picture">Take picture</string>
    <string name="ups_friends_list_is_empty">Ups, friends list is empty</string>
    <string name="for_someone">For someone</string>

    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="for_gift">For :</string>
    <string name="unknownViewModel">Unknown ViewModel class</string>
    <string name="notific_channel_desc">Notification channel for calendar</string>
    <string name="important_day">Tomorrow is an important day</string>
    <string name="no_internet">Please, keep in mind that without internet connection your changes won\'t be saved</string>
    <string name="welcome">Welcome!</string>
    <string name="change_to_dark">Change to dark</string>
    <string name="change_to_light">Change to light</string>
    <string name="deleteGiftsTitle">Delete all gifts?</string>
    <string name="deleteGiftsMessage">All gifts will be deleted, so you won\'t be able to change your mind about choosing any</string>
    <string name="deleteGiftTitle">Delete this gift?</string>
    <string name="deleteGiftMessage">After gift will be deleted, you won\'t be able to change your mind about choosing it</string>
    <string name="delete_wishlist">Delete this wishlist?</string>
    <string name="action_cannot_undone">This action cannot be undone</string>
    <string name="delete_gift">Delete this gift?</string>
    <string name="trans">transaction</string>
    <string name="avatar_image">%1$s\'s avatar</string>
    <string name="gift_image">%1$s\'s image</string>
    <string name="search_hint">Enter friend\'s name</string>
    <string name="cart_is_empty">Your cart is empty</string>
    <string name="no_wishlists_here_yet">No wishlists here yet</string>
    <string name="wishlist_is_empty_now">Wishlist is empty now</string>
    <string name="auth_error">Authentication error</string>
    <string name="dialog_logout">Are you sure you wanna logout?</string>
    <string name="edit_account">Edit account</string>
</resources>